--- a/config/typescript/tsconfig.main.json
+++ b/config/typescript/tsconfig.main.json
@@ -1,85 +1,70 @@
 {
-  
-  
   "compilerOptions": {
-    
     "target": "ES2022",
     "module": "CommonJS",
-    "lib": ["ES2022"],
+    "lib": [
+      "ES2022"
+    ],
     "moduleResolution": "node",
-
-    
     "outDir": "../../dist/main",
-    "rootDir": "../../src",
+    "rootDir": "../../src/main",
     "baseUrl": "../../",
-
-    
     "strict": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
     "strictFunctionTypes": true,
-
-    
     "allowJs": true,
     "checkJs": false,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
-
-    
     "noEmit": false,
     "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
     "removeComments": true,
-
-    
     "isolatedModules": true,
     "forceConsistentCasingInFileNames": true,
     "preserveConstEnums": true,
-
-    
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
-
-    
     "paths": {
-      "@main/*": ["../../src/main/*"],
-      "@backend/*": ["../../src/backend/*"],
-      "@shared/*": ["../../src/shared/*"],
-      "@types/*": ["../../src/types/*"],
-      "@services/*": ["../../src/services/*"],
-      "@database/*": ["../../src/database/*"],
-      "@caching/*": ["../../src/caching/*"]
+      "@main/*": [
+        "../../src/main/*"
+      ],
+      "@backend/*": [
+        "../../src/backend/*"
+      ],
+      "@shared/*": [
+        "../../src/shared/*"
+      ],
+      "@types/*": [
+        "../../src/types/*"
+      ],
+      "@services/*": [
+        "../../src/services/*"
+      ],
+      "@database/*": [
+        "../../src/database/*"
+      ],
+      "@caching/*": [
+        "../../src/caching/*"
+      ]
     }
   },
-
   "include": [
-    "../../src/main/**/*.ts",
-    "../../src/main/**/*.tsx",
-    "../../src/backend/**/*.ts",
-    "../../src/shared/**/*.ts",
-    "../../src/types/**/*.ts",
-    "../../src/services/**/*.ts",
-    "../../src/database/**/*.ts",
-    "../../src/caching/**/*.ts"
+    "../../src/main/**/*"
   ],
-
   "exclude": [
-    "../../node_modules*",
-    "../../dist*",
-    "../../build*",
-    "../../src/renderer*",
-    "../../src/components*",
-    "../../src/hooks*",
-    "../../tests*",
-    "../..*.test.ts",
-    "../..*.spec.ts"
+    "../../src/renderer/**/*",
+    "../../src/components/**/*",
+    "../../tests/**/*",
+    "../../node_modules"
   ],
-
   "ts-node": {
     "compilerOptions": {
       "module": "commonjs"
     }
-  }
+  },
+  "extends": "../../tsconfig.json"
 }
