--- a/config/typescript/tsconfig.renderer.json
+++ b/config/typescript/tsconfig.renderer.json
@@ -1,63 +1,41 @@
 {
-  
-  
   "extends": "../../tsconfig.json",
-  
   "compilerOptions": {
-    
-    "lib": ["ES2022", "DOM", "DOM.Iterable"],    
-    "module": "ESNext",                           
-    "target": "ES2022",                           
-    
-    
-    "jsx": "react-jsx",                           
-    "jsxImportSource": "react",                   
-    
-    
-    "types": [
-      "react",
-      "react-dom",
-      "node",                                      
-      "electron"
-    ],
-    
-    
-    "outDir": "../../dist/renderer",
-    "rootDir": "../../src/renderer",
-    
-    
-    "noEmit": true,                               
-    "emitDeclarationOnly": false,                 
-    
-    
     "lib": [
       "ES2022",
       "DOM",
       "DOM.Iterable",
-      "WebWorker"                                 
+      "WebWorker"
     ],
-    
-    
-    "downlevelIteration": true,                   
-    "allowUmdGlobalAccess": false,                
-    
-    
-    "skipDefaultLibCheck": true,                  
-    "preserveSymlinks": false                     
+    "module": "ESNext",
+    "target": "ES2022",
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "types": [
+      "react",
+      "react-dom",
+      "node",
+      "electron"
+    ],
+    "outDir": "../../dist/renderer",
+    "rootDir": "../../src",
+    "noEmit": true,
+    "emitDeclarationOnly": false,
+    "downlevelIteration": true,
+    "allowUmdGlobalAccess": false,
+    "skipDefaultLibCheck": true,
+    "preserveSymlinks": false
   },
-  
   "include": [
-    "../../src/renderer*",
-    "../../src/shared*",
-    "../../src/types*",
-    "../../src/hooks*",
-    "../../src/components*"
+    "../../src/renderer/**/*",
+    "../../src/components/**/*",
+    "../../src/hooks/**/*",
+    "../../src/shared/**/*",
+    "../../src/types/**/*"
   ],
-  
   "exclude": [
-    "../../src/main*",
-    "../../src/database*",                          
-    "../..*.spec.tsx",
-    "../..*.test.tsx"
+    "../../src/main/**/*",
+    "../../tests/**/*",
+    "../../node_modules"
   ]
 }
