--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "start": "python3 -m http.server 8080",
     "start:postgres": "node src/backend/postgresql-only-server.js",
     "start:auth": "node windows-auth-postgres.js",
-    "build": "electron-builder",
+    "build": "electron-builder --publish=never",
+    "build:linux": "electron-builder --linux --publish=never",
+    "build:win": "electron-builder --win --publish=never",
+    "build:mac": "electron-builder --mac --publish=never",
+    "build:ci": "electron-builder --publish=never",
     "clean": "rm -rf dist",
     "docker:postgres": "docker compose up -d postgres",
     "docker:down": "docker compose down",
@@ -42,6 +46,7 @@
     "directories": {
       "output": "dist"
     },
+    "publish": null,
     "files": [
       "main.js",
       "Accenture-Mainframe-AI-Assistant-Integrated.html",
